--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,47 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
+# no generated files in version control
+src/main/gen/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+hs_err*
+
+# backup files
+*~
+# backup files from JabRef itself
+*.bak
+
+# Ant
+buildant/
+build.number
+classes/
+user.properties
+src/main/resources/windows/nsis/dist/
+
+# Gradle
+build/
+.gradle
+# generated when `gradlew --gui` is called
+ui/
+gradle-app.setting
+
+# Netbeans
+nbproject/private/
+
+# IntelliJ IDEA
+out/
+*.iws
+.idea/
+*.ipr
+*.iml
+
+# Eclipse
+.settings/
+.classpath
+.project
+bin/
+
+# For Mac OS
+.DS_Store
+
+# UNKNWON
+jabref.xml
+install4j6/
